[gd_scene load_steps=6 format=3 uid="uid://2f5anfnjeq05"]

[ext_resource type="Script" path="res://Scripts/Main.gd" id="1"]
[ext_resource type="Script" path="res://Scripts/SocketHelper.gd" id="2"]
[ext_resource type="Script" path="res://Scripts/VTSAPIMessageConstructor.gd" id="3"]
[ext_resource type="Script" path="res://Scripts/ConfigHelper.gd" id="4"]
[ext_resource type="PackedScene" uid="uid://1nk5g41svbu4" path="res://Scenes/RangeEditWindow.tscn" id="5_l4ts5"]

[node name="Control" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 0
script = ExtResource("1")

[node name="SocketHelper" type="Node" parent="."]
script = ExtResource("2")

[node name="TVTSAPIMessageConstructor" type="Node" parent="."]
script = ExtResource("3")

[node name="ConfigHelper" type="Node" parent="."]
script = ExtResource("4")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GridContainer" type="GridContainer" parent="CanvasLayer"]
custom_minimum_size = Vector2(700, 0)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -300.0
offset_right = 300.0
offset_bottom = 315.0
grow_horizontal = 2

[node name="APIPanel" type="PanelContainer" parent="CanvasLayer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ConnectAPI" type="Button" parent="CanvasLayer/GridContainer/APIPanel"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0
text = "Connect to API"

[node name="PortLabel" type="Label" parent="CanvasLayer/GridContainer/APIPanel"]
layout_mode = 2
size_flags_horizontal = 4
text = "API Port Number:"

[node name="APIPort" type="SpinBox" parent="CanvasLayer/GridContainer/APIPanel"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 8
tooltip_text = "The VTube Studio API port number"
max_value = 999999.0
value = 8001.0

[node name="NetworkStatusLabel" type="Label" parent="CanvasLayer/GridContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
text = "Not connected to API..."
horizontal_alignment = 1
autowrap_mode = 2

[node name="Instructions" type="Label" parent="CanvasLayer/GridContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
text = "The first mouse range specified below must match the Mouse Input Config ranges in VTube Studio (VTS). It will be used to identify what the actual mouse position is described by VTS' MousePositionX and MousePositionY.
These will be remapped to MousePositionXRemapped and MousePositionYRemapped.
Every subsequent range will be checked in order, and if the mouse is in this range, the remapped parameters will act as if this is VTS' original range."
autowrap_mode = 2

[node name="CurrentMouse" type="Label" parent="CanvasLayer/GridContainer"]
layout_mode = 2
text = "Current Mouse Position:"

[node name="OutputEstimate" type="Label" parent="CanvasLayer/GridContainer"]
layout_mode = 2
text = "Expected Output:"

[node name="AddRange" type="Button" parent="CanvasLayer/GridContainer"]
layout_mode = 2
text = "Add Range"

[node name="RangesGrid" type="GridContainer" parent="CanvasLayer/GridContainer"]
layout_mode = 2
columns = 3

[node name="RangeEditWindow" parent="." instance=ExtResource("5_l4ts5")]
visible = false

[connection signal="pressed" from="CanvasLayer/GridContainer/APIPanel/ConnectAPI" to="." method="_on_connect_api_pressed"]
[connection signal="value_changed" from="CanvasLayer/GridContainer/APIPanel/APIPort" to="." method="_on_api_port_value_changed"]
[connection signal="pressed" from="CanvasLayer/GridContainer/AddRange" to="." method="_on_add_range_pressed"]
[connection signal="range_submitted" from="RangeEditWindow" to="." method="_on_range_edit_window_range_submitted"]
